fix letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ a {
   color: inherit;
 }
 /* common */
+:root {
+  --text-color: #f4f4fd;
+}
 
 /* HEADER */
 .header {
@@ -30,11 +33,12 @@ a {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 0.03em;
   text-transform: uppercase;
+  line-height: 1.17;
   color: #4d5ae5;
+  letter-spacing: 0.03em;
 }
-.logo > span {
+.header-span {
   color: #2e2f42;
 }
 .header-link {
@@ -75,6 +79,7 @@ a {
   line-height: 1.07;
 }
 .service-button {
+  color: #ffffff;
   background-color: rgba(77, 90, 229, 1);
   color: inherit;
   line-height: 1.5;
@@ -97,6 +102,7 @@ a {
   color: rgba(46, 47, 66, 1);
   font-weight: 500;
   line-height: 1.2;
+  letter-spacing: inherit;
 }
 
 /* FEATURES */
@@ -108,6 +114,7 @@ a {
   background-color: #ffffff;
 }
 .team-section-title {
+  letter-spacing: 0.02em;
   color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
@@ -118,6 +125,8 @@ a {
 .team-item-image {
 }
 .team-item-title {
+  letter-spacing: 0.02em;
+  color: #2e2f42;
   font-size: 20px;
   line-height: 1.2;
   font-weight: 500;
@@ -128,6 +137,7 @@ a {
 
 /* PORTFOLIO */
 .portfolio-setion-title {
+  letter-spacing: inherit;
   color: #2e2f42;
   font-size: 36px;
   line-height: 1.11;
@@ -141,6 +151,7 @@ a {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
+  letter-spacing: inherit;
 }
 .portfolio-item-text {
 }
@@ -150,10 +161,10 @@ a {
 .footer {
   background-color: rgba(46, 47, 66, 1);
 }
-.footer-logo > span {
-  color: #ffffff;
-}
 .footer-text {
-  color: #ffffff;
+  color: var(--text-color);
+}
+.footer-span {
+  color: #f4f4fd;
 }
 /* FOOTER */
